k8s/reset/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reset-service
spec:
  selector:
    app: reset
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
