k8s/reset/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reset
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: reset.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reset
                port:
                  number: 5003
